# evalgate

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
evalgate/: __init__.py  checks.py  cli.py  datasets.py  demo.py  format.py  leaderboard.py  mcp_server.py
examples/: points.txt
tests/: test_checks.py  test_leaderboard.py  test_network.py
