[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# PyPI distribution name is "eval-integrity" ("evalgate" and look-alikes were taken/blocked); the import package + CLI
# stay `evalgate` / `evalgate-mcp` (distribution name != import name is standard, cf. scikit-learn).
[project]
name = "eval-integrity"
version = "0.4.1"
description = "Dependency-free statistical checks for AI eval claims (multiple-comparisons, judge-bias, resolution, fragility) — as a CLI and an MCP server an agent calls before trusting a benchmark number."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ilpo Vaatainen" }]
keywords = [
    "llm", "evaluation", "benchmark", "judge-bias", "statistics",
    "multiple-comparisons", "mlops", "reproducibility", "eval",
    "mcp", "model-context-protocol", "agent", "agent-tools", "ai-agents",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = []

# The checks are zero-dependency. The MCP server (for agents) needs the `mcp` package:
#   pip install "evalgate[mcp]"
[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.urls]
Homepage = "https://ipezygj.github.io/eval-audit-site/"
Book = "https://leanpub.com/measurednotbelieved"
Source = "https://github.com/ipezygj/evalgate"

[project.scripts]
evalgate = "evalgate.cli:main"
evalgate-mcp = "evalgate.mcp_server:main"

[tool.setuptools]
packages = ["evalgate"]
